# sourcerer_v2

./: .gitignore  DEPLOYMENT.md  README.md  STATUS.md  install.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py
backend/: main.py  scheduler.py
backend/api/: __init__.py  chat.py  config.py  content.py  export_import.py  providers.py  sources.py
backend/chat/: __init__.py  manager.py  session.py  truncation.py
backend/config/: __init__.py  exceptions.py  manager.py  paths.py
backend/generation/: __init__.py  generators.py  pipeline.py  research.py
backend/models/: __init__.py  api.py  chat.py  config.py  content.py  provider.py  source.py
backend/providers/: __init__.py  anthropic_provider.py  base.py  custom_provider.py  huggingface_provider.py  moonshot_provider.py  openai_provider.py  registry.py
backend/rag/: __init__.py  embeddings.py  engine.py  retrieval.py  storage.py
backend/sources/: __init__.py  ingestion.py  manager.py  parsers.py
backend/utils/: __init__.py  file_utils.py  logging.py  security.py  validation.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPanel.jsx  ConfigPanel.jsx  ContentPanel.jsx  Dashboard.jsx  ImageGenerationSetup.jsx  Layout.jsx  LoadingSpinner.jsx  OnboardingFlow.jsx  ProviderSetup.jsx  SourcesPanel.jsx
tests/: README.md  conftest.py  test_api.py  test_config.py  test_providers.py
tests/e2e/: test_chat_workflow.py  test_content_generation_workflow.py  test_sources_workflow.py  test_system_integration.py
(+1 files in other folders)
